# FastAPI-Sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml
apis/fastapi-users-auth-api/: test_api.py
apis/fastcrud-api-with-sqladmin/: requirements.txt
apis/fastcrud-sqlalchemy-api/: test_api.py
apis/graphql-graphene-crud-api/: README.md  api.py  requirements.txt
apis/mongodb-crud-api-1/: api.py  requirements.txt
apis/mongodb-crud-api-2/: requirements.txt
apis/redis-om-crud-api/: requirements.txt
apis/tortoise-orm-crud-api/: README.md  api.py  requirements.txt  test_api.py
apis/websockets-with-redis-streams/: consumer.py  test_main.py
aws-s3-management-api/: README.md  api.py  requirements.txt  test_api.py
crud-api-with-redis-cache/: README.md  api.py  requirements.txt  test_api.py
fastapi-aws-lambda-api/: README.md  api.py  deploy.sh  requirements.txt
fastapi-aws-s3-api/: README.md  api.py  requirements.txt  test_api.py
fastapi-boilerplate/: .env.example  Dockerfile  README.md  docker-compose.yml  logging.config.json  main.py  pyproject.toml  test_main.py
fastapi-boilerplate-with-json-logger/: .env.example  README.md  main.py
fastapi-crud-api-with-redis-cache/: README.md  api.py  request_app_state_api.py  request_state_api.py  requirements.txt  test_api.py  test_request_app_state_api.py  test_request_state_api.py
fastapi-docker-cAdvisor/: README.md  docker-compose.yml
fastapi-fastcrud-api-1/: README.md  api.py  requirements.txt  test_api.py
fastapi-fastcrud-api-2/: api.py  test_api.py
fastapi-fastcrud-api-3/: README.md  api.py  test_api.py
fastapi-fastcrud-auto-endpoints-api/: api.py  requirements.txt  test_api.py
fastapi-fastcrud-custom-endpoints-api/: api.py  requirements.txt  test_api.py
fastapi-fastcrud-sqladmin-api/: README.md  api.py  test_api.py
fastapi-httpx/: README.md  api.py  requirements.txt  test_api.py
fastapi-mongodb-crud-api-1/: README.md  api.py  requirements.txt  test_api.py
fastapi-mongodb-crud-api-2/: api.py  requirements.txt  test_api.py
fastapi-protected-routes/: api.py
fastapi-redis-om-crud-api/: README.md  api.py  requirements.txt  test_api.py
fastapi-threadpool-executor/: README.md  api.py
fastapi-users-auth-api/: README.md  api.py  requirements.txt
fastcrud-api-with-autogenerated-routes/: README.md  api.py
fastcrud-api-with-custom-routes/: README.md  api.py  test_api.py
fastcrud-api-with-sqladmin/: README.md  api.py  requirements.txt  test_api.py
fastcrud-sqlalchemy-api/: README.md  api.py  test_api.py
file-upload/: README.md  api.py
file-upload-api/: routes_v1.py  routes_v2.py
graphql-graphene-crud-api/: test_api.py
httpx-api/: api.py  requirements.txt
mongodb-crud-api-1/: .dockerignore  .env.example  Dockerfile  README.md  api.py  docker-compose.yml  test_api.py
mongodb-crud-api-2/: README.md  api.py  test_api.py
monitor-active-threads/: README.md
protected-routes/: README.md  api.py  requirements.txt  test_api.py
redis-om-crud-api/: README.md  api.py  test_api.py
snippets/monitor-active-threads/: main.py
snippets/sync-and-async-file-upload/: README.md  api.py  requirements.txt
stream-llm-response/: .env.example  README.md  api.py  requirements.txt
websockets-with-redis-streams/: README.md  client.py  main.py  requirements.txt
