[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Theory and Practice of using FastAPI"
authors = [
    {name = "prathamlahoti123",email = "prathamlahoti@duck.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "fastcrud (>=0.15.7,<0.16.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pytest (>=8.3.5,<9.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "fakeredis (>=2.29.0,<3.0.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "sqladmin (>=0.20.1,<0.21.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = ["D100", "D104", "D204", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"test_*" = ["S101", "D103"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [".venv", "api/__pycache__", "tests/__pycache__"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
ruff = "^0.12.0"

