[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "beanie[srv]>=2.0.0",
    "email-validator>=2.2.0",
    "faker>=37.4.2",
    "fakeredis>=2.30.1",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[standard]>=0.116.1",
    "fastcrud>=0.15.12",
    "mongomock>=4.3.0",
    "mongomock-motor>=0.0.36",
    "motor>=3.7.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "redis-om>=0.3.5",
    "sqladmin>=0.21.0",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = [
  "COM812",
  "D100",
  "D104",
  "D203",
  "D204",
  "ERA001",
  "INP001",
  "UP040"
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D101", "D103", "S101"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.bandit]
exclude_dirs = [".venv", "__pycache__"]
skips = ["B101"]
tests = ["B104", "B105", "B113"]
severity = "high"
confidence = "high"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [
  "__pycache__",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
]
