[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Collection of snippets and implementations based on FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = [
  "COM812",
  "D100",
  "D104",
  "D203",
  "D204",
  "ERA001",
  "INP001",
  "UP040"
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D101", "D103", "S101"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.bandit]
exclude_dirs = [".venv", "__pycache__"]
skips = ["B101"]
tests = ["B104", "B105", "B113"]
severity = "high"
confidence = "high"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [
  "__pycache__",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
]
